# pdf-parser

./: .gitignore  README.md  build-wasm.sh  index.html  main.js  worker.js
rust-pdf-parser/: Cargo.toml
rust-pdf-parser/src/: lib.rs
