[package]
name = "rust-pdf-parser"
version = "0.1.0"
edition = "2024"
description = "A PDF parser compiled to WebAssembly using Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# PDF parsing
lopdf = "0.31.0"

# WebAssembly bindings
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = ["console"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen-futures = "0.4.39"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
